Support relationship keys and include only these in MERGE pattern
This also fixes an unrelated CypherGenerator test